wwr/styles/rafting.css
/* Default Styles */
:root {
    --heading-font: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
    --body-font: Arial, Helvetica, sans-serif;
    --bg-clr: #333;
    --primary-color: #000;
    --accent1-color: #3f3;
    --accent1-color-opaque: #33ff33ab;
    --primary-contrast-dark: #000;
    --primary-contrast-light: #f7f7f7;
    --primary-contrast-dark-opaque: #000000ce;
    --primary-contrast-light-opaque: #f7f7f7d7;
    --shadow: 5px 5px 15px 5px rgba(0,0,0,.25);
}

* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

/* Element Styles */
body {
    font-family: var(--body-font);
    color: var(--primary-color);
    background-color: var(--bg-clr);
}

main section {
    background-color: var(--accent1-color-opaque);
    box-shadow: var(--shadow);
    margin: 30px 0 35px 0;
}

header, main, footer {
    width: 840px;
    margin: 0 auto;
}

h1, h2 {
    font-family: var(--heading-font);
    color: var(--primary-color);
}

nav, p, section, article {
    margin: 16px;
    padding: 8px;
}

/* Class Styles */
.hero, .contact-info {
    position: relative;
}

.hero img {
    display: block;
    width: 100%;
    height: auto;
}

h1 {
    position: absolute;
    top: 20px;
    width: 100%;
    padding: 16px;
    text-align: center;
    opacity: 0.7;
    background-color: var(--accent1-color);
    color: var(--primary-contrast-dark);
}

article {
    position: absolute;
    bottom: 0;
    right: 0;
    background-color: var(--accent1-color-opaque);
    width: 30rem;
    color: var(--primary-color);
    padding-right: 0;
    margin-right: 0;
    box-shadow: -28px -28px 34px -30px rgba(0,0,0,0.52) inset;
}

.hero article img {
    float: right;
    width: 125px;
    padding: 3px 10px 3px 0;
}

.hero article p {
    margin: 0;
    padding: 30px 10px;
}

h2 {
    padding: 10px;
    text-align: center;
    border-bottom: 1px groove var(--primary-contrast-light-opaque);
}

.addr {
    padding: 0;
    margin: 0;
    color: var(--primary-contrast-light);
}

.contact-info {
    text-align: center;
}

.address-info {
    padding-top: 4.5rem;
}

.body-content {
    display: grid;
    grid-template-columns: 415px 415px;
    grid-gap: 10px;
    margin: 1rem 0 1rem 0;
}

iframe {
    max-width: 420px;
}

.plain-header {
    color: var(--primary-contrast-light);
    background-color: var(--bg-clr);
    padding: 0;
}

.rounded {
    padding: 5px;
    border-radius: 7px;
    display: flex;
    flex-direction: column;
    margin: 15px;
}

form {
    color: var(--primary-contrast-light);
}

.form-grid {
    display: grid;
    grid-template-columns: 1fr 2fr;
}

.employees img {
    height: 156px;
    border-radius: 7px;
    box-shadow: var(--shadow);
}

.employees h2 {
    border: none;
    color: var(--primary-contrast-light);
}

.employees .images{
    display: flex;
    justify-content: space-around;
    padding: 30px;
}

.employees {
    background-color: var(--accent1-color-opaque);
    margin: 30px 0;
    border-radius: 7px;
}

.form-section {
    display: flex;
    justify-content: space-between;
    flex-direction: column;
    padding: 5px;
}

.form-section input, .form-section label, .form-section textarea {
    margin: 8px;
}

textarea {
    width: auto;
    height: 75px;
}

.buttons {
    width: 10rem;
}

.form-section .horizontal-input {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    
}

.form-section .horizontal-input input{
    width: 10px;
}

.subscribe label {
    margin: 5px 0;
}

button {
    width: 275px;
    height: 25px;
    border-radius: 7px;
    border: none;
    align-self: center;
}

#submit:hover {
    transform: scale(1.05);
    box-shadow: var(--shadow);
}

.buttons label{
    display: flex;
    flex-direction: column;
    position: relative;
}

.buttons label {
    display: flex;
    flex-direction: row;
    width: 160px;
}

.input-content {
    display: flex;
    flex-direction: column;
}

.form-section label p {
    text-align: left;
    justify-content: center;
    align-items: center;
    margin-right: 32px;
    margin-top: 1.5rem;
}

.img-section {
    text-align: center;
    margin: 0;
    padding: 0;
    font-size: large;
}

.img-section p {
    margin: 0;
    padding: 0;
    font-size: large;
    color: var(--primary-contrast-light);
}

input, textarea {
    font: var(--body-font);
}

iframe {
    margin-top: 15px;
    height: 95%;
    border-radius: 7px;
}

/* Header Styles */
/* ---------------------------------------------------- */
header {
    display: grid;
    grid-template-columns: 1fr 1fr;
    background-color: var(--accent1-color-opaque);
    padding: 15px;
    margin-bottom: 25px;
    box-shadow: var(--shadow);
    justify-items: center;
    align-items: center;
}

header nav ul {
    display: flex;
}

header nav ul li {
    border: solid 1px #3f3f3f;
    width: 110px;
    height: 40px;
    display: flex;
    justify-content: center;
    align-items: center;
    background-color: var(--bg-clr);
}

header nav ul li:hover {
    box-shadow: var(--shadow);
    transform: scale(1.1);
}

header nav ul li a {
    text-decoration: none;
    color: var(--primary-contrast-light);
}

header img {
    height: 100px;
    width: auto;
    border: solid 1px var(--bg-clr);
    border-radius: 7px;
    box-shadow: var(--shadow);
}
/* ---------------------------------------------------- */

/* Footer Styles */
/* ---------------------------------------------------- */
footer {
    box-shadow: var(--shadow);
    background-color: var(--accent1-color-opaque);
    display: grid;
    grid-template-columns: 1fr 350px 1fr;
    align-items: center;
}

footer .copy {
    grid-column-start: 2;
    margin: 0px;
}

.socialmedia {
    text-align: right;
    margin: 0px;
}

.socialmedia a {
    text-decoration: none;
    margin: 0px;
}

footer img:hover {
    filter: drop-shadow(2px 2px 2px #00000077);
    transform: scale(1.1);
}
/* ---------------------------------------------------- */

/* History Styles */
/* ---------------------------------------------------- */
.history {
    display: flex;
    flex-direction: row;
    justify-content: center;
    align-items: center;
}

.history img {
    height: 200px;
    width: auto;
}

.history p {
    margin-top: 1px;
}
/* ---------------------------------------------------- */

/* Adventure Styles */
/* ---------------------------------------------------- */
.adventure {
    display: flex;
    flex-direction: row;
    justify-content: space-around;
    margin-top: 15px;
    margin-bottom: 25px;
}

.adventure figure {
    max-width: 145px;
    text-align: center;
}

.adventure img {
    width: 125px;
}
/* ---------------------------------------------------- */

